Broken keynav on unlock screen
Affected version
Current master.
Bug summary
Steps to reproduce
- Type anything to focus the prompt
- Use any form of keynav:
-
<tab>
or<shift><tab>
-
<ctrl><alt>tab
to "Unlock Window"
-
What happened
Key focus is lost: It's impossible to navigate back to the entry in order to unlock, or reset with Esc
to start over.
Relevant logs, screenshots, screencasts etc.
Nothing. Even the screen reader remains silent.